[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thinkingmemory"
version = "0.1.0"
description = "The memory database for AI agents. recall: intent in, the right context out"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "sqlmodel>=0.0.14",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",
    "pgvector>=0.2.3",
    "pydantic-settings>=2.0.0",
    "numpy>=1.24.0",
    "fastembed>=0.3.0",
    "tiktoken>=0.5.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.2.0",
]
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.39.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "mcp>=1.2.0",
]

[project.scripts]
thinkingmemory-mcp = "thinkingmemory.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["thinkingmemory*"]
